@@ -14,12 +14,12 @@ import site
 dirname = os.path.dirname
 # This is to get the "...\Lib\site-packages" directory
 # out of this file name: "...\Lib\site-packages\win32\Lib\pywin32_bootstrap.py".
-# It needs to be searched when installed in VirtualEnv or Python's venv.
+# It needs to be searched when installed in virtual environments.
 level3_up_dir = dirname(dirname(dirname(__file__)))
 
-site_packages_dirs = getattr(site, "getsitepackages", lambda: [level3_up_dir])()
+site_packages_dirs = getattr(site, "getsitepackages", lambda: [])()
 if level3_up_dir not in site_packages_dirs:
-    site_packages_dirs.append(level3_up_dir)
+    site_packages_dirs.insert(0, level3_up_dir)
 
 for site_packages_dir in site_packages_dirs:
     pywin32_system32 = os.path.join(site_packages_dir, "pywin32_system32")
@@ -28,3 +28,4 @@ for site_packages_dir in site_packages_dirs:
             os.add_dll_directory(pywin32_system32)
         else:
             os.environ["PATH"] = pywin32_system32 + os.pathsep + os.environ["PATH"]
+        break
